...
            list
        }

    Scaffold(
        topBar = {
            TopAppBar(
                title = { Text("Calendar", style = MaterialTheme.typography.headlineSmall) },
            )
        },
    ) { padding ->
        Column(
            modifier =
                Modifier
...
